# infinite-craft

./: .gitignore  Cargo.toml  README.md  combine-depth.py  infinite-craft.py  requirements.txt
combine_recipes/: Cargo.toml
combine_recipes/src/: main.rs
src/: cache.rs  db.rs  enumeration.rs  helper.rs  lib.rs  main.rs  search.rs  set_enum.rs  subset.rs  uniform_family.rs
