[workspace]
members = ["combine_recipes"]

[package]
name = "infinite-craft"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
bincode = "1.3.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

[dev-dependencies]
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
